# b3d-vis

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENCE  README.md  sln.DotSettings  vcpkg.json
renderer/fastVoxelTraversal/: CMakeLists.txt  FastVoxelTraversalDeviceCode.cu  FastVoxelTraversalRenderer.cpp  FastVoxelTraversalRenderer.h  FastVoxelTraversalSharedStructs.h  SourceVolumeLoader.cpp  SourceVolumeLoader.h
renderer/fitsNvdb/: CMakeLists.txt  FitsNvdbRenderer.cpp  FitsNvdbRenderer.cu  FitsNvdbRenderer.h  OptixHelper.cuh  SharedStructs.h
renderer/lib/: CMakeLists.txt  Common.h  CudaGpuTimers.h  Curve.cpp  DebugDrawListBase.h  GizmoHelperBase.h  Logging.cpp  Logging.h  NullDebugDrawList.h  NullGizmoHelper.h  OwlExtensions.h  Profiler.h  RenderData.h  RenderFeature.h  RendererBase.cpp  RendererBase.h  SharedStructs.h
renderer/lib/features/: BackgroundColorFeature.cpp  BackgroundColorFeature.h  ColorMapFeature.cpp  ColorMapFeature.h  RenderSyncFeature.cpp  RenderSyncFeature.h  RenderTargetFeature.cpp  RenderTargetFeature.h  SoFiASubregionFeature.cpp  SoFiASubregionFeature.h  TransferFunctionFeature.cpp  TransferFunctionFeature.h
renderer/nano/: CMakeLists.txt  FoveatedHelper.cu  FoveatedHelper.cuh  FoveatedRendering.cu  FoveatedRendering.h  NanoRenderer.cpp  NanoRenderer.cu  NanoRenderer.h  OptixHelper.cuh  RuntimeDataSet.cpp  RuntimeDataSet.h  SampleAccumulators.h  SamplerMapper.h  ServerClientFeature.cpp  ServerClientFeature.h  SharedStructs.h  old_RuntimeDataSet.cpp  old_RuntimeDataSet.h
renderer/nanoOutOfCore/: CMakeLists.txt  Curve.h  NanoOutOfCoreRenderer.cpp  NanoOutOfCoreRenderer.cu  NanoOutOfCoreRenderer.h  Old_OpenFileDialog.cpp  Old_OpenFileDialog.h  OpenFileDialog.cpp  OpenFileDialog.h  SharedStructs.h
renderer/null/: CMakeLists.txt  NullRenderer.cpp  NullRenderer.h
renderer/nullRenderer/: CMakeLists.txt  NullRenderer.h
renderer/samples/cudaSurfaceObjectWriteTest/: CMakeLists.txt  cudaSurfaceObjectWriteTestRenderer.cu  cudaSurfaceObjectWriteTestRenderer.h
renderer/simpleTriangles/: CMakeLists.txt  SimpleTrianglesDeviceCode.cu  SimpleTrianglesRenderer.h  deviceCode.h  simpleTrianglesHostCode.cpp
tools/: CMakeLists.txt
tools/colorMap/: CMakeLists.txt
tools/colorMap/include/: ColorMap.h
tools/colorMap/src/: ColorMap.cpp
tools/common/fits/: FitsCommon.h
tools/fits/: CMakeLists.txt
tools/fits/include/: FitsTools.h
tools/fits/shared/: FitsCommon.h
tools/fits/src/: FitsTools.cpp
tools/fitsCutterNanoVdbConverter/: BinaryPartitionClusterProcessor.h  CMakeLists.txt  ClusterProcessor.h  Common.h  FitsHelper.cpp  FitsHelper.h  FitsTools.cpp  MaskHelper.cpp  MaskHelper.h  NanoCutApi.cpp  NanoCutApi_Tests.cpp  NanoCutterApi.h  NanoGenerator.cpp  main.cpp
tools/fitsCutterNanoVdbConverter/fitstools/: FitsTools.h
tools/fitsCutterNanoVdbConverter/include/: NanoCutApi.h
tools/header/: CMakeLists.txt
tools/header/common/: Box.h  CMakeLists.txt  Vec.h
tools/header/helper/: CMakeLists.txt  TimeStamp.h
tools/header/nvdbRendering/: CMakeLists.txt  SharedRenderingStructs.h
tools/header/pipeline/: CMakeLists.txt  Result.h
tools/nano/: CMakeLists.txt
tools/nano/include/: NanoTools.h
tools/nano/shared/: NanoResult.h
tools/nano/src/: NanoTools.cpp
tools/nanoCutterParser/: CMakeLists.txt  NanoCutterParser.cpp  NanoCutterParser.h
tools/project/: CMakeLists.txt
tools/project/fileCatalog/: CMakeLists.txt
tools/project/project/: CMakeLists.txt
tools/project/serverFileProvider/: CMakeLists.txt
tools/projectExplorer/: CMakeLists.txt
tools/projectExplorer/include/: Catalog.h  Project.h  ProjectProvider.h  Request.h  Result.h
tools/projectExplorer/src/: Catalog.cpp  Common.cpp  Common.h  ProjectProvider.cpp  Request.cpp
tools/projectServer/: CMakeLists.txt  README.md  main.cpp
tools/projectServerClient/: CMakeLists.txt
tools/runtimeDataset/: CMakeLists.txt
tools/sofia/: CMakeLists.txt
tools/sofiaNanoPipeline/: CMakeLists.txt
tools/sofia_rest_server/: CMakeLists.txt  main.cpp
tools/sofia_server/: README.md  conda_env.yml  main.py  sofia_default_config.par
tools/sofia_server_client/: CMakeLists.txt
unityCUDAInterop/: CMakeLists.txt  README.md
unityCUDAInterop/UnityPlayground/: .gitignore  log.txt
unityCUDAInterop/actionInterface/: CMakeLists.txt
unityCUDAInterop/actionRuntime/: CMakeLists.txt
unityCUDAInterop/actions/: CMakeLists.txt  CmakeLists.txt
unityCUDAInterop/interopHelper/: CMakeLists.txt
unityCUDAInterop/logger/: CMakeLists.txt
unityCUDAInterop/pluginAPI/: CMakeLists.txt
unityCUDAInterop/pluginInterface/: CMakeLists.txt
unityCUDAInterop/runtime/: CMakeLists.txt
unityCUDAInterop/unityPluginAPI/: CMakeLists.txt
viewer/: Animation.h  App.cpp  App.h  App.rc  ApplicationContext.cpp  ApplicationContext.h  ApplicationSettings.cpp  ApplicationSettings.h  CMakeLists.txt  Camera.h  CameraControllers.cpp  CameraControllers.h  CameraManipulator.h  Color.h  DebugDrawList.cpp  DebugDrawList.h  DebugDrawVertex.h  DockableWindowViewBase.cpp  DockableWindowViewBase.h  Dockspace.cpp  Dockspace.h  Flags.h  FontCollection.cpp  FontCollection.h  GLGpuTimers.h  GLUtils.h  GizmoHelper.cpp  GizmoHelper.h  GizmoOperationFlags.h  GuiDefaultLayoutSettings.cpp  GuiDefaultLayoutSettings.h  IdGenerator.h  ImGuiExtension.cpp  ImGuiExtension.h  InteropUtils.h  Mathematics.h  ModalViewBase.cpp  ModalViewBase.h  NanoViewer.cpp  NanoViewer.h  (+15 more)
viewer/framework/: ApplicationContext.cpp  ApplicationContext.h  DockableWindowViewBase.cpp  DockableWindowViewBase.h  Dockspace.cpp  ExtensionBase.h  MenuBar.cpp  MenuBar.h  ModalViewBase.cpp  ModalViewBase.h  RendererExtensionBase.h  UpdatableComponentBase.cpp  UpdatableComponentBase.h  WindowViewBase.cpp  WindowViewBase.h
viewer/passes/: DebugDrawPass.cpp  DebugDrawPass.h  FullscreenTexturePass.cpp  FullscreenTexturePass.h  InfinitGridPass.cpp  InfinitGridPass.h
viewer/views/: ServerConnectSettingsView.cpp  ServerConnectSettingsView.h  ServerConnectView.cpp  ServerConnectView.h  VolumeView.cpp  VolumeView.h
(+276 files in other folders)
